--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compile "org.springframework.boot:spring-boot-starter-security"
+	implementation('io.jsonwebtoken:jjwt:0.2')
+	compile group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.10.1'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
