--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,9 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compile "org.springframework.boot:spring-boot-starter-security"
+	compile 'org.modelmapper:modelmapper:2.3.3'
 	implementation('io.jsonwebtoken:jjwt:0.2')
 	compile group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.10.1'
 	runtimeOnly 'mysql:mysql-connector-java'
