--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=my-secret-pw
 spring.datasource.driver-class-name =com.mysql.jdbc.Driver
 #spring.jpa.show-sql: true
+#secretKey=W31c0m3*
+#spring.config.name=application
+#spring.security.oauth2.resourceserver.jwt.public-key-location
+#api.secretKey=djkjdksj
