--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ sourceCompatibility = '14'
 
 repositories {
 	mavenCentral()
+	jcenter()
 }
 
 dependencies {
@@ -17,6 +18,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compile "org.springframework.boot:spring-boot-starter-security"
+	compile 'an.awesome:pipelinr:0.5'
 	compile 'org.modelmapper:modelmapper:2.3.3'
 	implementation('io.jsonwebtoken:jjwt:0.2')
 	compile group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.10.1'
