--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.3.3.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
+	id 'application'
 }
 
 group = 'com.deiva'
@@ -24,3 +25,5 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+// mainClassName = 'deiva.DeivaApplication'
+mainClassName = 'com.deiva.deiva.DeivaApplication'
